--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,6 +5,8 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  # enable running manually
+  workflow_dispatch:
 
 env:
   CARGO_TERM_COLOR: always
