--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dyn-clonable = "0.9.0"
 itertools = "0.10.3"
 literal = "0.2.0"
 smallvec = "1.9.0"
